Finished projects section links

--- a/index.html
+++ b/index.html
@@ -132,28 +132,13 @@
       <div class="carousel-container">
         <div class="carousel">
           <div class="carousel-item">
-            <img src="assets/quiz.png" alt="Project 1" />
+            <a
+              href="https://appetize.io/app/qcbpsvt3ey4todly2ty6oh4oqm?device=pixel7&osVersion=13.0"
+              target="_blank"
+              ><img src="assets/quiz.png" alt="Project 1"
+            /></a>
             <h3>Adroid Quiz Game</h3>
             <span
-              ><a
-                aria-label="live-preview"
-                rel="noreferrer"
-                target="_blank"
-                href="https://www.linkedin.com/in/mirkoterzic/"
-                ><svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="32"
-                  height="32"
-                  viewBox="0 0 24 24"
-                  fill="none"
-                  stroke="black"
-                  stroke-width="2"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  class="feather feather-eye"
-                >
-                  <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                  <circle cx="12" cy="12" r="3"></circle></svg></a
               ><a
                 aria-label="github"
                 rel="noreferrer"
@@ -177,26 +162,131 @@
             ></span>
           </div>
           <div class="carousel-item">
-            <img src="/assets/admin.png" alt="Project 2" />
+            <a
+              href="https://mirkoterzic.github.io/odin-dashboard/"
+              target="_blank"
+              ><img src="/assets/admin.png" alt="Project 2"
+            /></a>
             <h3>Admin Dashboard</h3>
+            <span
+              ><a
+                aria-label="github"
+                rel="noreferrer"
+                target="_blank"
+                href="https://github.com/mirkoterzic/odin-dashboard"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="tabler-icon tabler-icon-brand-github"
+                >
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                  ></path></svg></a
+            ></span>
           </div>
           <div class="carousel-item">
-            <img src="/assets/json page.png" alt="Project 2" />
+            <a
+              href="https://mirkoterzic.github.io/Superhero-JSON-practice-/"
+              target="_blank"
+              ><img src="/assets/json page.png" alt="Project 2"
+            /></a>
             <h3>Json page</h3>
+            <span
+              ><a
+                aria-label="github"
+                rel="noreferrer"
+                target="_blank"
+                href="https://github.com/mirkoterzic/Superhero-JSON-practice-"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="tabler-icon tabler-icon-brand-github"
+                >
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                  ></path></svg></a
+            ></span>
           </div>
           <div class="carousel-item">
-            <img src="/assets/beer.png" alt="Project 2" />
+            <a
+              href="https://mirkoterzic.github.io/CraftBeerPage/"
+              target="_blank"
+              ><img src="/assets/beer.png" alt="Project 2"
+            /></a>
             <h3>Craft beer Page</h3>
+            <span
+              ><a
+                aria-label="github"
+                rel="noreferrer"
+                target="_blank"
+                href="https://github.com/mirkoterzic/CraftBeerPage"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="tabler-icon tabler-icon-brand-github"
+                >
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                  ></path></svg></a
+            ></span>
           </div>
           <div class="carousel-item">
-            <img src="/assets/tic-tac-toe.png" alt="Project 2" />
+            <a
+              href="https://mirkoterzic.github.io/odin-TicTacToe/"
+              target="_blank"
+              ><img src="/assets/tic-tac-toe.png" alt="Project 2"
+            /></a>
             <h3>Tic tac Toe</h3>
+            <span
+              ><a
+                aria-label="github"
+                rel="noreferrer"
+                target="_blank"
+                href="https://github.com/mirkoterzic/odin-TicTacToe"
+                ><svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="32"
+                  height="32"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="black"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="tabler-icon tabler-icon-brand-github"
+                >
+                  <path
+                    d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                  ></path></svg></a
+            ></span>
           </div>
         </div>
         <button class="prev" onclick="prevSlide()">&#10094;</button>
         <button class="next" onclick="nextSlide()">&#10095;</button>
       </div>
     </section>
+    <section class="contact"></section>
 
     <footer></footer>
   </body>
