added Contact section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <p>
           In my projects, I strive for clean, maintainable code. <br />
           I love collaborating with others and am always eager to take on new
-          challenges that push my skills to the next level.
+          challenges
         </p>
       </div>
     </section>
@@ -286,7 +286,28 @@
         <button class="next" onclick="nextSlide()">&#10095;</button>
       </div>
     </section>
-    <section class="contact"></section>
+    <section class="contact">
+      <div class="contact-container">
+        <h2>Contact Me</h2>
+        <div class="contact-links">
+          <a href="mailto:mirko.terzic2002@gmail.com" class="contact-link"
+            >Email</a
+          >
+          <a
+            href="https://www.linkedin.com/in/mirkoterzic/"
+            target="_blank"
+            class="contact-link"
+            >LinkedIn</a
+          >
+          <a
+            href="https://github.com/mirkoterzic"
+            target="_blank"
+            class="contact-link"
+            >GitHub</a
+          >
+        </div>
+      </div>
+    </section>
 
     <footer></footer>
   </body>
