--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav>
       <h3>Mirko Terzic</h3>
       <ul class="nav-menu">
-        <li>Home</li>
-        <li>About</li>
-        <li>Projects</li>
-        <li>Contact</li>
+        <a href="#hero"><li>Home</li></a>
+        <a href="#about-section"><li>About</li></a>
+        <a href="#projects-section"><li>Projects</li></a>
+        <a href="#contact-section"><li>Contact</li></a>
       </ul>
     </nav>
     <section id="hero">
@@ -105,7 +105,7 @@
         </div>
       </div>
     </section>
-    <section class="about">
+    <section class="about" id="about-section">
       <div class="about-image">
         <img src="/assets/about-image.jpg" alt="" />
       </div>
@@ -127,7 +127,7 @@
         </p>
       </div>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects-section">
       <h2>Projects</h2>
       <div class="carousel-container">
         <div class="carousel">
@@ -286,7 +286,7 @@
         <button class="next" onclick="nextSlide()">&#10095;</button>
       </div>
     </section>
-    <section class="contact">
+    <section class="contact" id="contact-section">
       <div class="contact-container">
         <h2>Contact Me</h2>
         <div class="contact-links">
@@ -309,7 +309,61 @@
       </div>
     </section>
 
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <div class="footercpr">
+          <h3>Copyright © 2024. All rights are reserved</h3>
+        </div>
+        <div class="footersocials">
+          <span
+            ><a
+              aria-label="linkedin"
+              rel="noreferrer"
+              target="_blank"
+              href="https://www.linkedin.com/in/mirkoterzic/"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="32"
+                height="32"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="tabler-icon tabler-icon-brand-linkedin"
+              >
+                <path
+                  d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
+                ></path>
+                <path d="M8 11l0 5"></path>
+                <path d="M8 8l0 .01"></path>
+                <path d="M12 16l0 -5"></path>
+                <path d="M16 16v-3a2 2 0 0 0 -4 0"></path></svg></a
+            ><a
+              aria-label="github"
+              rel="noreferrer"
+              target="_blank"
+              href="https://github.com/mirkoterzic"
+              ><svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="32"
+                height="32"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="white"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="tabler-icon tabler-icon-brand-github"
+              >
+                <path
+                  d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+                ></path></svg></a
+          ></span>
+        </div>
+      </div>
+    </footer>
   </body>
   <script src="script.js"></script>
 </html>
