--- a/index.html
+++ b/index.html
@@ -107,7 +107,10 @@
     </section>
     <section class="about" id="about-section">
       <div class="about-image">
-        <img src="/assets/about-image.jpg" alt="" />
+        <img
+          src="https://raw.githubusercontent.com/mirkoterzic/MyPortfolio/main/assets/about-image.jpg"
+          alt=""
+        />
       </div>
       <div class="about-text">
         <h2>About me</h2>
@@ -135,7 +138,9 @@
             <a
               href="https://appetize.io/app/qcbpsvt3ey4todly2ty6oh4oqm?device=pixel7&osVersion=13.0"
               target="_blank"
-              ><img src="assets/quiz.png" alt="Project 1"
+              ><img
+                src="https://github.com/mirkoterzic/MyPortfolio/blob/main/assets/quiz.png?raw=true"
+                alt="Project 1"
             /></a>
             <h3>Adroid Quiz Game</h3>
             <span
@@ -165,7 +170,9 @@
             <a
               href="https://mirkoterzic.github.io/odin-dashboard/"
               target="_blank"
-              ><img src="/assets/admin.png" alt="Project 2"
+              ><img
+                src="https://github.com/mirkoterzic/MyPortfolio/blob/main/assets/admin.png?raw=true"
+                alt="Project 2"
             /></a>
             <h3>Admin Dashboard</h3>
             <span
@@ -195,7 +202,9 @@
             <a
               href="https://mirkoterzic.github.io/Superhero-JSON-practice-/"
               target="_blank"
-              ><img src="/assets/json page.png" alt="Project 2"
+              ><img
+                src="https://github.com/mirkoterzic/MyPortfolio/blob/main/assets/json%20page.png?raw=true"
+                alt="Project 2"
             /></a>
             <h3>Json page</h3>
             <span
@@ -225,7 +234,9 @@
             <a
               href="https://mirkoterzic.github.io/CraftBeerPage/"
               target="_blank"
-              ><img src="/assets/beer.png" alt="Project 2"
+              ><img
+                src="https://github.com/mirkoterzic/MyPortfolio/blob/main/assets/beer.png?raw=true"
+                alt="Project 2"
             /></a>
             <h3>Craft beer Page</h3>
             <span
@@ -255,7 +266,9 @@
             <a
               href="https://mirkoterzic.github.io/odin-TicTacToe/"
               target="_blank"
-              ><img src="/assets/tic-tac-toe.png" alt="Project 2"
+              ><img
+                src="https://github.com/mirkoterzic/MyPortfolio/blob/main/assets/tic-tac-toe.png?raw=true"
+                alt="Project 2"
             /></a>
             <h3>Tic tac Toe</h3>
             <span
