Link for Quiz game github fixed

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 aria-label="github"
                 rel="noreferrer"
                 target="_blank"
-                href="https://github.com/mirkoterzic"
+                href="https://github.com/mirkoterzic/QuizGame"
                 ><svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="32"
